fixed clipping issue with home pits

--- a/client/public/css/layout.sass
+++ b/client/public/css/layout.sass
@@ -36,7 +36,7 @@ body
 
 .home
   width: 64px
-  height: 140px
+  height: 150px
   color: yellow
   font-size: 1.6rem
   margin: 0rem .5rem
